feat(BODY): Transform arif-fazil.com to red/black theme with fractal/triangle patterns - Red primary (#8B0000) on black (#050505) - Triangle patterns: Sierpinski geometric backgrounds - Fractal SVG noise overlay - Replaced avatar with animated Sierpinski triangle SVG - Earth/Economics/AI themed cards with strata, market, neural patterns

--- a/body/public/manifest.json
+++ b/body/public/manifest.json
@@ -1,23 +1,23 @@
 {
-  "name": "Arif Fazil — Sovereign Architect",
+  "name": "Arif Fazil — Forged in Red",
   "short_name": "Arif Fazil",
-  "description": "Personal portfolio of Muhammad Arif bin Fazil, Sovereign Architect of the arifOS kernel.",
+  "description": "Personal portfolio of Muhammad Arif bin Fazil. Forged in red — where earth, economics, and AI converge.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0a0a0a",
-  "theme_color": "#f59e0b",
+  "background_color": "#050505",
+  "theme_color": "#8B0000",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
   "categories": ["portfolio", "technology", "AI"],
   "icons": [
     {
-      "src": "/profile-avatar.jpg",
+      "src": "/forge-background.jpg",
       "sizes": "192x192",
       "type": "image/jpeg"
     },
     {
-      "src": "/arif-hero-og.jpg",
+      "src": "/forge-background.jpg",
       "sizes": "512x512",
       "type": "image/jpeg"
     }
