DEPLOY: APPS site v55.3 — 9 Floors + Mirrors/Walls Architecture + llms.json fix
🚀 Deployment Ready
- APPS site aligned with 9 Floors (F1-F9) canonical architecture
- Added 2 Mirrors (Δ·Ω) and 2 Walls (Ψ·888) visualization
- Updated deployment workflow to copy llms.json, llms.txt, _headers, _redirects
- Fixed Cloudflare Pages routing for .json endpoints

🏛️ Architecture Alignment
- 9 Floors: 4 HARD (VOID) + 5 SOFT (SABAR)
- 2 Mirrors: ARIF (Mind) + ADAM (Heart) — Propose Only
- 2 Walls: APEX PRIME (Judiciary) + 888 JUDGE (Sovereign)

🔧 Files Updated
- APPS/src/App.tsx: 9 floors display + Mirrors/Walls sections
- APPS/index.html: Meta tags updated (9 Floors)
- APPS/public/: llms.json, llms.txt, _headers, _redirects
- .github/workflows/deploy.yml: Copy all static assets

DITEMPA BUKAN DIBERI — Forged for deployment.
Authority: 888_JUDGE | Status: READY_TO_DEPLOY

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,11 @@ jobs:
           cp public/*.jpg dist/ 2>/dev/null || true
           cp public/*.png dist/ 2>/dev/null || true
           cp public/_headers dist/ 2>/dev/null || true
+          cp public/_redirects dist/ 2>/dev/null || true
           cp public/robots.txt dist/ 2>/dev/null || true
           cp public/sitemap.xml dist/ 2>/dev/null || true
+          cp public/llms.txt dist/ 2>/dev/null || true
+          cp public/llms.json dist/ 2>/dev/null || true
           cp public/build-info.json dist/ 2>/dev/null || true
 
       - name: Deploy HUMAN to Cloudflare Pages
@@ -63,9 +66,11 @@ jobs:
           cp public/*.jpg dist/ 2>/dev/null || true
           cp public/*.png dist/ 2>/dev/null || true
           cp public/_headers dist/ 2>/dev/null || true
+          cp public/_redirects dist/ 2>/dev/null || true
           cp public/robots.txt dist/ 2>/dev/null || true
           cp public/sitemap.xml dist/ 2>/dev/null || true
           cp public/llms.txt dist/ 2>/dev/null || true
+          cp public/llms.json dist/ 2>/dev/null || true
           cp public/build-info.json dist/ 2>/dev/null || true
           cp -r public/api dist/ 2>/dev/null || true
 
@@ -96,8 +101,11 @@ jobs:
           npm ci
           npm run build
           cp public/_headers dist/ 2>/dev/null || true
+          cp public/_redirects dist/ 2>/dev/null || true
           cp public/robots.txt dist/ 2>/dev/null || true
           cp public/sitemap.xml dist/ 2>/dev/null || true
+          cp public/llms.txt dist/ 2>/dev/null || true
+          cp public/llms.json dist/ 2>/dev/null || true
           cp public/build-info.json dist/ 2>/dev/null || true
 
       - name: Deploy APPS to Cloudflare Pages
