ci: Update deployment workflows to handle shared components
Add steps to copy shared components into each site's src/ directory
and update import paths from '../../shared' to './shared' during CI.

This ensures TrinityLogo, DitempaBadge, and SiteSwitcher components
are available during GitHub Actions builds.

Affected workflows:
- deploy.yml (main deployment)
- deploy-trinity.yml (matrix strategy)

All three sites (HUMAN, THEORY, APPS) now get shared components
copied before build step.

--- a/.github/workflows/deploy-trinity.yml
+++ b/.github/workflows/deploy-trinity.yml
@@ -46,6 +46,15 @@ jobs:
           cache-dependency-path: |
             ${{ matrix.dir }}/package-lock.json
 
+      - name: Copy shared components
+        run: |
+          mkdir -p ${{ matrix.dir }}/src/shared/components
+          cp -r shared/components/* ${{ matrix.dir }}/src/shared/components/
+
+      - name: Update imports for local paths
+        run: |
+          find ${{ matrix.dir }}/src -name "*.tsx" -exec sed -i "s|'../../shared/components/TrinityLogo'|'./shared/components/TrinityLogo'|g" {} \;
+
       - name: Install dependencies (${{ matrix.site_name }})
         run: cd ${{ matrix.dir }} && npm install
 
